# semantic-layer-sdk-python

./: .changie.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  lefthook.yaml  mypy.ini  pyproject.toml  ruff.toml
.changes/: header.tpl.md  v0.1.0.md  v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.13.1.md  v0.13.2.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v0.9.1.md
.changes/unreleased/: Breaking Changes-20241001-160946.yaml  Breaking Changes-20241017-144053.yaml  Chore-20240618-132741.yaml  Chore-20240620-123207.yaml  Chore-20240709-115016.yaml  Chore-20240709-122738.yaml  Chore-20240816-133922.yaml  Chore-20241114-150932.yaml  Chore-20250116-131014.yaml  Chore-20250327-101226.yaml  Chore-20250331-133422.yaml  Chore-20250403-163034.yaml  Dependencies-20240624-151729.yaml  Dependencies-20240809-170009.yaml  Dependencies-20240819-132546.yaml  Deprecations-20241017-163158.yaml  Deprecations-20250212-124416.yaml  Features-20240619-142416.yaml  Features-20240709-103228.yaml  Features-20240709-103239.yaml  Features-20240709-103250.yaml  Features-20240709-103258.yaml  Features-20240709-121955.yaml  Features-20240709-135734.yaml  Features-20240819-130313.yaml  Features-20240819-130327.yaml  Features-20240920-180550.yaml  Features-20240920-201139.yaml  Features-20241001-155522.yaml  Features-20241017-143959.yaml  Features-20241017-163057.yaml  Features-20241112-154335.yaml  Features-20241213-104739.yaml  Features-20250211-174833.yaml  Features-20250212-131405.yaml  Features-20250327-224851.yaml  Features-20250414-170939.yaml  Features-20250416-142848.yaml  Features-20251217-140444.yaml  Fixes-20240618-124639.yaml  (+31 more)
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  regression-report.yml
.github/actions/setup-python-env/: action.yaml
.github/workflows/: changelog-check.yaml  code-quality.yaml  create-release-pr.yaml  create-release-tag.yaml  publish-test.yaml  publish.yaml
.lefthook/commit-msg/: template-checker
constraints/: README.md  py310.txt  py311.txt  py312.txt  py313.txt  py39.txt
constraints/build-constraints/: py312.txt
constraints/constraints/: py312.txt
constraints/overrides/: py312.txt
dbt_sl_client/: async_client.py  error.py
dbt_sl_client/api/adbc/: async_client.py  protocol.py
dbt_sl_client/api/graphql/: async_client.py  protocol.py
dbt_sl_client/models/: dimension.py  measure.py  metric.py  query.py
dbtsl/: __init__.py  __init__.pyi  async_client.py  asyncio.py  backoff.py  env.py  error.py  timeout.py
dbtsl/api/adbc/: async_client.py  protocol.py
dbtsl/api/adbc/client/: asyncio.py  base.py  sync.py
dbtsl/api/graphql/: async_client.py  protocol.py  util.py
dbtsl/api/graphql/client/: asyncio.py  asyncio.pyi  base.py  sync.py  sync.pyi
dbtsl/api/shared/: query_params.py
dbtsl/client/: asyncio.py  asyncio.pyi  base.py  sync.py  sync.pyi
dbtsl/models/: __init__.py  base.py  dimension.py  entity.py  environment.py  measure.py  metric.py  query.py  saved_query.py  time.py  time_granularity.py
examples/: compile_query_sync.py  fetch_dimension_values_sync.py  fetch_metric.py  fetch_metric_async.py  fetch_metric_sync.py  list_metrics.py  list_metrics_lazy_sync.py  list_metrics_sync.py  list_saved_queries_async.py
scripts/: bump-version.sh  fetch_schema.py  lock-deps.sh
tests/: conftest.py  fetch_schema.py  query_test_cases.py  test_error.py  test_imports.py  test_models.py  test_timeout.py  util.py
tests/api/adbc/: test_protocol.py
tests/api/graphql/: test_client.py  test_protocol.py  test_util.py
tests/integration/: conftest.py  test_gql.py  test_sl_client.py  test_timeouts.py
